tests/files/type_checker_tests/should_fail/078.cmdr
//Should fail using uninitialized variable
echo $x;
